--- a/estilos.css
+++ b/estilos.css
@@ -54,7 +54,7 @@ body {
   .hightlights-section{
     width: 100%; 
     height: 350px;
-    background-color: rgb(57, 35, 255);
+    background-color: rgba(253, 0, 0, 0.473);
   }
   
   
