--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -4,7 +4,7 @@
 	font-family: sans-serif;
 }	
 header {
-	background: rgb(222 227 237);
+	background: rgb(0, 0, 0);
 	width: 100%;
 	height: auto;
 	position: fixed;
