Modificaciones al slider

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -3,85 +3,21 @@
 	padding: 0;
 	font-family: sans-serif;
 }	
-header {
-	background: rgb(0, 0, 0);
-	width: 100%;
-	height: auto;
-	position: fixed;
-	z-index: 100;
-}
 
 .con_tainer{
 	width:auto;
-	padding-top: 100px;
-	background-color: rgba(214, 230, 243, 0.871);
 	text-align: justify;
 }
 
-.aviso{
-	width: auto;
-	margin: 10%;
-}
-
-.banner{
-	width: 100%;
-	height: 200px;
+.banner1{
+	width: 100%; 
+	height: 600px;
 	animation: banner 100s infinite linear alternate;
 	background-size: 100% 100%;
 	position: relative;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-size: cover;
-	background-position: center center;
-}
-
-.contenedor {
-	width: 90%;
-	max-width: 1200px;
-	margin: auto;
-	padding: 40px 0;
-
-	display: flex;
-	gap: 20px;
-}
-
-.titulo {
-	font-size: 24px;
-	padding: 20px 0;
-}
-
-.contenedor-conciertos {
-	display: flex;
-	width: 80%;
-	flex-wrap: wrap;
-	gap: 20px;
-}
-
-.card {
-	border-radius: 10px;
-	min-height: 200px;
-	font-weight: bold;
-	padding: 20px;
-	position: relative;
-	overflow: hidden;
-	background-size: cover;
-	background-position: center center;
-
-	width: calc(33.33%-28px);
-}
-
-.card .textos {
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;	
-}
-
-.banner1 {
-	border-radius: 10px;
-	text-align: center;
-	padding: 20px;
 	background-size: cover;
 	background-position: center center;
 }
@@ -109,239 +45,6 @@ header {
 	cursor: pointer;
 }
 
-@media screen and (max-width: 900px) {
-	
-}
-
-@media screen and (max-width: 700px) {
-	
-}
-
-@media screen and (max-width: 600px) {
-
-}
-
-header .logo img {
-    width: 15rem;
-    height: 10rem;
-    float: left;
-	padding-right: 10px;
-}
-
-@keyframes banner{
-	0%, 10%{
-		background-image: url(../Files/fotos_casos.jpg);
-	}
-	12%, 20%{
-		background-image: url(../Files/fotos_sandwichitas.jpg);
-	}
-	25%, 45%{
-		background-image: url(../Files/fotos_impresion.jpg);
-	}
-	50%, 65%{
-		background-image: url(../Files/fotos_costalitos.jpg);
-	}
-	70%, 80%{
-		background-image: url(../Files/fotos_sanson.jpg);
-	}
-	85%, 100%{
-		background-image: url(../Files/fotos_bobinas.jpg);
-	}
-}
-.float{
-	float: left;
-}
-
-.catalogo{
-	margin-left: 20px;
-
-}
-.catalogo h2{
-	text-align: center;
-	
-}
-.catalogo img{
-	width:250px;
-}
-.wp-caption{
-	margin: 10px;
-	
-}
-
-.cat1{
-	box-align:center;
-	margin-left: 10px;
-	margin-right: 1px;
-	overflow:hidden;
-}
-.cat1:hover .imagen {
-	-webkit-transform:scale(1.3);
-	transform:scale(1.3);
-
-}
-
-nav {
-	float: left;
-	padding-right: 100px;
-	margin: 50px;
-  }
-  
-nav ul {
-	list-style: none;
-	overflow: hidden;
-}
-  
-nav ul li {
-	float: left;
-	font-family: Arial, sans-serif;
-	font-size: 16px;
-}
-  
-nav ul li a {
-	display: block;
-	padding: 20px;
-	color: rgb(2, 2, 2);
-	text-decoration: none;
-}
-nav ul li a:hover{
-	color: white;
-	text-decoration: none;
-}
-nav ul li:hover {
-	
-	background: hsl(206, 80%, 45%);
-	background-color: rgb(28, 97, 162);
-}
-
-.vertical{
-	position: absolute;
-	display: none;
-	list-style: none;
-	width: 200px;
-	background-color: #2a69b2;
-}
-.vertical li a{
-	display: block;
-	color: white;
-	padding: 15px 71px 15px ;
-	text-decoration: none;
-}
-nav ul li:hover .vertical{
-	display: block;
-	
-}
-
-
-.Inicio{
-	width: 100%;
-	height: 500px;
-	background-size: 100% 100%;
-	position: relative;
-	align-items: center;
-}
-.Inicio h3{
-	color: #3088e0;
-	font-size: 35px;
-	margin-bottom:  10px;
-	letter-spacing: 1px;
-}
-.Inicio p{
-	color: #c7c7c7;
-	line-height: 1.2;
-	margin-bottom: 20px;	
-}
-
-
-
-.Content h2 {
-	background-color:rgba(255, 255, 255, 0.713);
-	text-align: left;
-	text-emphasis-color: rgb(28, 97, 162);
-	color: rgb(28, 97, 162);;
-	
-}
-.Content h3{
-	margin: 50px;
-	text-align: center;
-}
-.Content h4{
-	margin: 85px;
-	text-align: justify;
-}
-.Content span{
-	
-	text-align: left;
-	font-weight: 100px;
-	font-size: 20px;
-
-}
-.Content img{
-	width: 70%;
-	height: 250px;
-}
-
-.b-table{
-	display: flex;
-	float: right;
-	padding-right: 200px;
-	border: 10cm;
-	width: 20%;
-}
-.g-table{
-	display: flex;
-	
-}
-
-
-.table{
-	margin-top: 3cm;
-	text-align: center;
-	width: 100%;
-	margin-left: 5cm;
-}
-.g-img{
-	margin-right: 15cm;
-	margin-top: 1.5cm;
-	width: 3cm;
-}
-
-.g-img h1{
-	color: #2E406E;
-	background-color: #c7c7c7;
-}
-.muestra{
-    z-index: 1;
-	width: 100%;
-	max-width: 850px;
-	text-align: center; 
-	margin: auto;
-}
-.muestra h1{
-	z-index: 1;
-	width: 100%;
-	max-width: calc(center);
-	background-color:rgba(255, 255, 255, 0.713);
-	text-align: left;
-	text-emphasis-color: rgb(28, 97, 162);
-	color: rgb(28, 97, 162);;
-}
-.muestra p{
-	z-index: 1;
-	width: 100%;
-	max-width: auto;
-	text-align: justify;
-	margin-right: 60px;
-	font-weight: 100px;
-	font-size: 20px;
-}
-.muestra h3{
-	text-align: center;
-	color:rgb(28, 97, 162);
-}
-
-.Container{
-	margin: auto;
-}
 
 .social-bar{
     position: fixed;
@@ -381,230 +84,33 @@ nav ul li:hover .vertical{
      box-shadow: 0 0 .5rem rgba(0, 0, 0, .42);
  }
 
-.g-footer{
-	background-color: #2E406E;
-	padding: 2rem;
-	display: block;
-	align-items: center;
-}
-.Logo img{
-	max-width: auto;
-	z-index: 1;
-	
-}
-
-.showv1{
-	height: 7rem;
-	
-	max-width: auto;
-	float: right;
-}
-.show2{
-	float: left;
-	z-index: 1;
-	max-width: auto;
-}
-
-.Developed p{
-	color: #fff;
-	text-align: center;
-	font-size-adjust: inherit;
-
-}
-.flip-card{
-	width: 150px;
-	height: 150px;
-	margin: auto;
-}
-
-.flip-card-back{
-	
-	color: #fff;
-	transform: rotateY(180deg);
-	z-index: 1;
-}
-.flip-card-back img{
-	width: 70%;
-	margin-top: 0px;
-	height: 100%;
-}
-.flip-card-inner{
-	position: relative;
-	height: 100%;
-	transition: transform 0.6s;
-	transform-style: preserve-3d;
-}
-.flip-card-back, .flip-card-front{
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	backface-visibility: hidden;
-}
-
-flip-card-front img{
-	width: 50%;
-	position: relative;
-	border-radius: 15px;
-}
-
-.flip-card:hover .flip-card-inner{
-	transform: rotateY(180deg)
-}
-
-
-/*PRUEBA PARA SECCION*/
-.lateral{
-	display: flex;
-	justify-content: space-around;
-	flex-wrap: wrap;
-}
-.caja{
-	border: 1px solid black;
-	padding: 15px;
-	width: 300px;
-	margin-top: 20px;
-	margin-bottom: 20px;
-}
-.animado{
-	opacity: 0;
-	transition: all 0.5s;
-}
-
-.aviso{
-	font-size: 13px;  
-	color: #0e0e0e;  
-  }
-  
-.form{
-	background-image: url(../Files/bolsas-de-plastico.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-	padding-left: 100px;
-}  
-
-
-.formulario h1{
-	font-size: 39px;  
-	text-align: left; 
-	padding-bottom: 10px; 
-	color: #000000;
-  }
-  
-  
-  .formulario h3{
-	font-size: 16px; 
-	padding-bottom: 30px;
-	color: #0e0e0e;   
-  }
-  
-  
-  .formulario p{
-	font-size: 14px; 
-	color: #0e0e0e; 
-  }
-  
-  
-  ::-webkit-input-placeholder {
-   color: #1100ff;
-  }
-  
-  
-  ::-webkit-textarea-placeholder {
-   color: #1100ff;
-  }
-  
-  
-  .formulario input:focus{
-	outline:0;
-	border: 1px solid #1100ff;
-  }
-  
-  
-  .formulario textarea:focus{
-	outline:0;
-	border: 1px solid #1100ff;
-  }
-  .contact_form{  
-	width: 390px; 
-	height: auto;
-	margin: 80px auto;
-	border-radius: 80px;
-	border: #1100ff;  
-	padding-top: 50px;
-	padding-bottom: 20px;  
-	background-color: #4c738cad; 
-	padding-left: 30px; 
-	margin-left: 140px;
-  }
-  
-  
-  input{
-	background-color: #fbfbfb; 
-	width: 300px; 
-	height: 40px; 
-	border-radius: 5px;  
-	border-style: solid; 
-	border-width: 1px; 
-	border-color: #ff957d; 
-	margin-top: 10px;  
-	padding-left: 10px;
-	margin-bottom: 20px; 
-  }
-  
-  
-  textarea{
-	background-color: #fbfbfb; 
-	width: 300px; 
-	height: 150px; 
-	border-radius: 5px;  
-	border-style: solid; 
-	border-width: 1px; 
-	margin-top: 10px;  
-	padding-left: 10px;
-	margin-bottom: 30px; 
-	padding-top: 15px; 
-  }
-  
-  
-  label{
-	display: block; 
-	float: center;  
-  }
-  
-  
-  button{
-	height: 35px; 
-	padding-left: 5px;
-	padding-right: 5px;   
-	margin-bottom: 20px; 
-	text-transform: uppercase;
-	background-color: #647ffa; 
-	border-color: #1100ff; 
-	border-style: solid; 
-	border-radius: 10px;    
-	cursor: pointer;
-	text-align: center;
-  }
-  
-  
-  button p{
-	color: #000000; 
-  }
-  
-  
-  span{
-	color: #000000; 
-  }
-  
   .swiper{
 	  background-position: center;
 	  background-size: cover;
 	  width: 100%;
-	  height: 600px;
+	  height: 500px;
   }
   .swiper img{
 	  padding-left: 1px;
-	  width: 100%;
+	  width: 70%;
+  }
+
+  .swiper-slide h3{
+	margin-top: 200px;
+	margin-right: 20px;
+	font-size: 20px;  
+
+  }
+
+  .bantxt{
+	  background-color: lightgray;
+	  float: right;
+	  width: auto;
+	  height: 600px;
+  }
+
+  .bantxt a{
+	  margin: 10px;
   }
 
   .ir-arriba{
@@ -617,131 +123,3 @@ flip-card-front img{
 	bottom:20px;
 	right:20px;
   }
-
-  #debug{
-	  position: fixed;
-	  bottom: 50px;
-	  left: 10px;
-	  width: 700px;
-	  background: lightyellow;
-	  border: 1px solid #333; 
-	  font: 20px/30px Verdana;
-  }
-
-  .dj-banner{
-	  margin: 0px 0; 
-	  position: relative;
-	}
-   .dj-banner .dj-bg{
-	   width: 100%;
-	}
-   .dj-banner .dj-text{
-	   text-align: center; 
-	   padding-bottom: 20px;
-	}
-   @media screen and (min-width:768px){
-    .dj-banner .dj-bg img{
-		  margin-right: 100px;
-		}
-    .dj-banner .dj-text{
-		  position: absolute; 
-		  top: 80%; left: 7%; 
-		  transform: translate(-10%, -50%); 
-		  width: 50%; 
-		  text-align: center;
-		}
-
-.dj-banner .dj-text h1{
-		  	font-size: calc(2*1.5vw);
-			color: #526ec7;
-			  border: crimson;
-	}
-.dj-banner .dj-text p{
-	font-size: calc(1.2*1.5vw);
-
-}
-   }
-
-   .iso{
-	   	margin: 1%;
-	   	padding: 15%;
-		left: 0%;
-		background-image: url('./Files/back_iso.jpg');
-		background-repeat: no-repeat;
-		width: 50%;
-   }
-   .iso h3{
-	   font-size: 50px;
-   }
-   .iso p{
-	   font: 15px;
-	   text-align: justify;
-	   
-   }
-   
-   .is_text{
-		width: 50%;
-   }
-
-   .iso-wrap{
-	   position: relative;
-	   display: flex;
-   }
-   .backiso{
-	   background-image: url("../Files/back_iso.jpg");
-   }
-
-   .section{
-	   position: relative;
-   }
-
-   .section_wrapper {
-    max-width: 1220px;
-    margin: 0 auto;
-    position: relative;
-}
-
-.column, .columns {
-    float: left;
-    margin: 0 1% 40px;
-}
-
-.list_item {
-    display: block;
-}
-
-.list_item .list_left {
-    color: #5e9b50;
-}
-
-.list_item .list_image {
-    box-sizing: unset;
-    font-size: 0;
-}
-
-.list_item .list_left {
-    width: 80px;
-    height: 80px;
-    line-height: 80px;
-    font-size: 50px;
-    overflow: hidden;
-    text-align: center;
-    float: left;
-}
-
-.list_item .list_right {
-    padding: 5px 0 0; 
-    margin-left: 100px; 
-    word-wrap: break-word; 
-}
-
-img.scale-with-grid, #Content img {
-    max-width: 100%;
-    height: auto;
-}
-
-.list_item .list_left img {
-    max-width: 80px!important;
-    max-height: 80px!important;
-    vertical-align: middle;
-}
