--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,5 @@
+
+
 body {
     margin: 0px;
     padding: 0%;
@@ -5,23 +7,57 @@ body {
   
   header {
     width: 100%;
-    height: 150px;
-    background-color: #ffffff;
+    height: 100%;
   }
-  header .footer-image img {
-    background-image: url("https://img.icons8.com/android/24/000000/search.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    width: 308px;
-    height: 100px;
+  header ul{
+    border: 2px solid black;
+    background-color:rgb(255, 255, 247) ;
   }
+
+  header a{
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-decoration:none;
+    color:inherit;
+    font-size: 20px;
+
+  }
+  header li{
+    display:inline-block;
+    width:110px;
+    height: 60px;
+    padding: 5px 10px;
+    margin-right: 40px;
+
+    text-align:center;
+    color:rgb(0, 0, 0);
+    margin-block-start: 25px;
+     
+  }
+
+  header li:hover{
+    background-color: #fff;
+    color:#000;
+
+    }
   
-  header div {
-    display: flex;
-    justify-content: center;
-  }
-  
+.imagen-cont{
+  background-color: rgb(255, 255, 255);
+  display:inline-flex;
+  align-items:baseline;
+  width: 80px;
+  height: 80px;
+  border: none;
+  margin-left: 400px;
+    
+}
+.imagen-cont img{
+  width: 80px;
+  height: 80px;
+  align-items: center;
+}
+
+
   main {
     width: 100%;
     height: 1840px;
@@ -32,7 +68,7 @@ body {
   .slide-container{ 
      width: 100%; 
      height: 600px;
-    background-color: aqua;
+    background-color: rgb(24, 24, 24);
   }
   
   .catalog-section{ 
