--- a/estilos.css
+++ b/estilos.css
@@ -1,68 +1,76 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
+   *{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+   }
 
-body {
-    margin: 0px;
-    padding: 0%;
-  }
-  
+
+button{
+   color: #ffffff;
+   border-color: #24252A;
+ }
+
+
   header {
-    width: 100%;
-    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 30px 10%;
+    background-color: #24252A;
+  }
+  .logo{
+    cursor: pointer;
+    height: 110px;
+    width: 200px;
+    order: 3;
+    margin-left: auto;
   }
 
-  header a{
-    text-align: center;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    text-decoration:none;
-    color:inherit;
-    font-size: 20px;
-
-  }
-  header li{
-    display:inline-block;
-    width:110px;
-    height: 30px;
-    padding: 5px 10px;
-    margin-right: 70px;
-    vertical-align: bottom;
-    text-align:center;
-    color:rgb(0, 0, 0);   
+  nav{
+    order: 1;
   }
 
-  header li:hover{
-    background-color: #fff;
-    color:#000;
+  .nav-links{
+    list-style: none;
+  }
+  .nav-links li{
+    display: inline-block;
+    padding: 0px 20px;
 
-    }
-  
-.imagen-cont{
-  background-color: rgb(255, 255, 255);
-  display:inline-flex;
-  align-items:baseline;
-  width: 80px;
-  height: 80px;
-  border: none;
-  margin-left: 400px;
+  }
+
+  .nav-links li:nth-child(1){
+   padding: 0 20px 0 0;
+  }
+  .nav-links li a{
+    transition: all 0.3s ease 0s;   
+    color: #edf0f1;
+    font-family: 'Montserrat', sans-serif;
+   font-weight: 500;
+   font-size: 30px;
+   text-decoration: none;
     
-}
-.imagen-cont img{
-  width: 80px;
-  height: 80px;
-  align-items: center;
-}
+  }
+  .nav-links li a:hover{
+    color: #0088a9;
+  }
+
+
 
 
   main {
     width: 100%;
     height: 2600px;
-    background-color: rgb(121, 108, 51);
+    background-color: rgba(121, 108, 51);
   }
   
-  
+ 
   .slide-container{ 
      width: 100%; 
      height: 600px;
-    background-color: rgba(24, 24, 24, 0.475);
+    background-color: rgb(0, 0, 0);
   }
   
   .catalog-section{ 
