--- a/estilos.css
+++ b/estilos.css
@@ -61,24 +61,40 @@ button{
  
   .slide-container{ 
      width: 100%; 
-     height: 600px;
-    background-color: rgb(0, 0, 0);
+     height: auto;
+    background-color: rgb(101, 101, 101);
   }
   
   .catalog-section{ 
     width: 100%; 
-    height: 900px;
+    height: auto;
    background-color: rgb(43, 151, 10);
   }
   .first-product{
     width: 100%; 
-    height: 400px;
+    height: auto;
    background-color: rgb(57, 55, 204);
   }
+
+  .first-product h3{
+    float: right;
+    margin: 200px;
+    text-align: center;
+    font-size: 30px;
+  }
+
+
   .second-product{
     width: 100%; 
-    height: 400px;
+    height: auto;
     background-color: rgb(255, 238, 5); 
+   }
+
+   .second-product h3{
+    float: left;
+    margin: 140px;
+    text-align: center;
+    font-size: 30px;
    }
   
   .hightlights-section{
@@ -154,6 +170,123 @@ button{
   footer {
     width: 100%;
     height: 200PX;
-    background-color: #000000;
+    background-color: #3e3838;
 
   }
+
+  /*Catalogo*/
+
+  .contenedor {
+    width: 90%;
+    max-width: 1200px;
+    margin: auto;
+    padding: 40px 0;
+  
+    display: flex;
+    gap: 20px;
+  }
+  
+  .titulo {
+    font-size: 24px;
+    padding: 80px 200px;
+    background-color: #9de372bd;
+  }
+  
+  .contenedor-conciertos {
+    display: flex;
+    width: 80%;
+    flex-wrap: wrap;
+    gap: 20px;
+  }
+  
+  .card {
+    border-radius: 10px;
+    min-height: 200px;
+    font-weight: bold;
+    padding: 20px;
+    position: relative;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center center;
+    width: calc(33.33%-28px);
+  }
+  
+  .card .textos {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;	
+  }
+  .backlife {
+    border-radius: 10px;
+    text-align: center;
+    padding: 20px;
+    background-size: cover;
+    background-position: center center;
+    background-image: url('./assets/img/Des-4.jpg');
+  }
+  .backlife h3{
+    padding-top: 50px;
+    font-size: 60px;
+  }
+  .backlife ul {
+    list-style: none;
+  }
+  
+  .backlife ul li {
+    margin: 15px;
+    font-weight: bold;
+  }
+  
+  .backlife .boton {
+    background: #0040ffd2;
+    display: block;
+    width: 100%;
+    font-weight: bold;
+    font-size: 24px;
+    text-align: center;
+    padding: 10px;
+    border: none;
+    border-radius: 100px;
+    font-family: 'Roboto', sans-serif;
+    cursor: pointer;
+    
+  }
+
+  @media screen and (max-width: 900px) {
+	
+  }
+  
+  @media screen and (max-width: 700px) {
+    
+  }
+  
+  @media screen and (max-width: 600px) {
+  
+  }
+
+  a:link{
+    text-decoration:none
+  }
+  a:visited{
+    text-decoration:none
+  }
+    /*END Catalogo*/
+
+    .ir-arriba{
+      display:none;
+      padding:20px;
+      font-size:20px;
+      color:#fff;
+      cursor:pointer;
+      position: fixed;
+      bottom:20px;
+      right:20px;
+      }
+
+      .Developed{
+        float: left;
+        padding-left: 150px;
+        padding-top: 15px;
+        text-align: center;
+      }
