--- a/assets/css/formu-est.css
+++ b/assets/css/formu-est.css
@@ -5,7 +5,7 @@
 body{
   height: 1000px; 
   font-family: 'Noto Sans', sans-serif;
-  background-color: #000000;
+  background-color: #24252A;
   
 }
 
