--- a/estilos.css
+++ b/estilos.css
@@ -62,41 +62,71 @@ button{
   .slide-container{ 
      width: 100%; 
      height: auto;
-    background-color: rgb(101, 101, 101);
+    background-color: #212121;
   }
   
   .catalog-section{ 
     width: 100%; 
     height: auto;
-   background-color: rgb(43, 151, 10);
+   background-color: #DFDFDE;
   }
+
   .first-product{
-    width: 100%; 
-    height: auto;
-   background-color: rgb(57, 55, 204);
+    width:100%;
+    height: 400px;;
+     display:flex;
+     align-items:center;
+     justify-content:center; 
+    background-color: #D9CAB3;
+
   }
 
   .first-product h3{
-    float: right;
-    margin: 200px;
+    font-family: 'Montserrat', sans-serif;
+    margin: 20px;
     text-align: center;
     font-size: 30px;
   }
+  .first-product img{
+    height: 400px;
+     width: 50%;
+     justify-content: flex-end;
+  }
+  .content-leter-1{
+    width: 50%;
+    margin: 0px 0px 0px 0px;
+    padding: 30px;
+    text-align: center;
+  }
 
-
-  .second-product{
-    width: 100%; 
-    height: auto;
-    background-color: rgb(255, 238, 5); 
+   .second-product{
+    width:100%;
+    height: 400px;;
+     display:flex;
+     align-items:center;
+     justify-content:center; 
+     background-color: #6D9886;
    }
 
    .second-product h3{
-    float: left;
-    margin: 140px;
+    font-family: 'Montserrat', sans-serif;
+    margin: 20px;
     text-align: center;
     font-size: 30px;
    }
+   .second-product img{
+     margin-left: 100px;
+     height: 400px;
+      width: 50%;
+      justify-content: flex-end;
+   }
+   .content-leter{
+    margin: 30px;
+    padding: 30px;
+    text-align: center;
+   }
   
+   
   .hightlights-section{
     height: 600px;
     width: 100%;
@@ -167,12 +197,6 @@ button{
 .content1 span{
   font-size: 20px;
 }
-  footer {
-    width: 100%;
-    height: 200PX;
-    background-color: #3e3838;
-
-  }
 
   /*Catalogo*/
 
@@ -285,8 +309,52 @@ button{
       }
 
       .Developed{
-        float: left;
-        padding-left: 150px;
-        padding-top: 15px;
-        text-align: center;
+        padding: 50px;
+        margin-right: 200px;
       }
+
+      
+
+.Developed a{
+  color: #edf0f1;
+  font-family: 'Montserrat', sans-serif;
+  text-decoration: none;
+  font-size: 20px; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  margin-top: 2px;
+}
+footer img{
+  padding-left: 15px;
+  width: 250px;
+  float: left;
+  margin-top: 10px;
+}
+footer {
+  width: 100%;
+  height: 175px;
+  background-color: #24252A;
+
+}
+
+
+.logos-box{
+  margin-top: -120px;
+  margin-right: 60px;
+  float: right;
+  display: flex;
+  flex-wrap: nowrap;
+}
+.logos-box img{
+  height: 50px;
+  width: auto;
+}
+
+ .face{
+   padding: 0px;
+  margin-left: 10px;
+  border-radius: 10px;
+
+}
